src/objects/System_Checks__c.object
<CustomObject>
    <fields>
        <fullName>Office_365_Access_Comments__c</fullName>
        <label>Office 365 Access Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office 365 Access Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_ChecksjvjM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Completed_Date__c</fullName>
        <label>Office 365 Access Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Final_RAG__c</fullName>
        <label>Office 365 Access Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_365_Access_Initial_RAG__c</fullName>
        <label>Office 365 Access Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Comments__c</fullName>
        <label>PAC Card Entry Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAC Card Entry Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxCj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Completed_Date__c</fullName>
        <label>PAC Card Entry Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Final_RAG__c</fullName>
        <label>PAC Card Entry Check Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Initial_RAG__c</fullName>
        <label>PAC Card Entry Check Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Priority__c</fullName>
        <label>PAC Card Entry Check Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_IT_Report_Comments__c</fullName>
        <label>RC IT Report Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RC_IT_Report_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RC IT Report Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checksjvk5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RC_IT_Report_Completed_Date__c</fullName>
        <label>RC IT Report Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_IT_Report_Final_RAG__c</fullName>
        <label>RC IT Report Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_IT_Report_Initial_RAG__c</fullName>
        <label>RC IT Report Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Baseline_Docs_Comments__c</fullName>
        <label>Review Baseline Docs Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Baseline_Docs_Completed_By__c</fullName>
        <label>Review Baseline Docs Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Baseline_Docs_Completed_Date__c</fullName>
        <label>Review Baseline Docs Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Baseline_Docs_Final_RAG__c</fullName>
        <label>Review Baseline Docs Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Baseline_Docs_Initial_RAG__c</fullName>
        <label>Review Baseline Docs Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_DR_Procedure_Comments__c</fullName>
        <label>Review DR Procedure Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_DR_Procedure_Completed_By__c</fullName>
        <label>Review DR Procedure Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_DR_Procedure_Completed_Date__c</fullName>
        <label>Review DR Procedure Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_DR_Procedure_Final_RAG__c</fullName>
        <label>Review DR Procedure Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_DR_Procedure_Initial_RAG__c</fullName>
        <label>Review DR Procedure Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_TockenDS_Change_Comments__c</fullName>
        <label>SFDC TockenDS Change Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SFDC_TockenDS_Change_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC TockenDS Change Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxCZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_TockenDS_Change_Completed_Date__c</fullName>
        <label>SFDC TockenDS Change Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_TockenDS_Change_Final_RAG__c</fullName>
        <label>SFDC TockenDS Change Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_TockenDS_Change_Initial_RAG__c</fullName>
        <label>SFDC TockenDS Change Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_TockenDS_Change_Priority__c</fullName>
        <label>SFDC TockenDS Change Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Monthly_Checks_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Monthly Checks Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxDh</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Server_Patch_Management_Check_Comments__c</fullName>
        <label>Server Patch Management Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Server_Patch_Management_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Server Patch Management Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspt5o</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Server_Patch_Management_Check_Comp_Date__c</fullName>
        <label>Server Patch Management Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Server_Patch_Management_Check_Priority__c</fullName>
        <label>Server Patch Management Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Patch_Management_Final_RAG__c</fullName>
        <label>Server Patch Management Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Server_Patch_Management_Initial_RAG__c</fullName>
        <label>Server Patch Management Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_check_comments__c</fullName>
        <label>Storage check comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Storage_check_completed_date__c</fullName>
        <label>Storage check completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storage_check_final_RAG__c</fullName>
        <label>Storage check final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_check_initial_RAG__c</fullName>
        <label>Storage check initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Check_Comments__c</fullName>
        <label>Time Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Time_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspwq9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Check_Completed_Date__c</fullName>
        <label>Time Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Check_Final_RAG__c</fullName>
        <label>Time Check Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Check_Initial_RAG__c</fullName>
        <label>Time Check Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Check_Priority__c</fullName>
        <label>Time Check Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USB_Mass_Storage_Device_Check_Comments__c</fullName>
        <label>USB Mass Storage Device Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>USB_Mass_Storage_Device_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>USB Mass Storage Device Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspwyX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USB_Mass_Storage_Device_Check_Comp_Date__c</fullName>
        <label>USB Mass Storage Device Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USB_Mass_Storage_Device_Check_Priority__c</fullName>
        <label>USB Mass Storage Device Check Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USB_Mass_Storage_Device_Final_RAG__c</fullName>
        <label>USB Mass Storage Device Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USB_Mass_Storage_Device_Initial_RAG__c</fullName>
        <label>USB Mass Storage Device Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Disabled_Accounts_Check_Comments__c</fullName>
        <label>VPN Disabled Accounts Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VPN_Disabled_Accounts_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPN Disabled Accounts Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPN_Disabled_Accounts_Check_Comp_Date__c</fullName>
        <label>VPN Disabled Accounts Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPN_Disabled_Accounts_Check_Final_RAG__c</fullName>
        <label>VPN Disabled Accounts Check Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Disabled_Accounts_Check_Initial_RAG__c</fullName>
        <label>VPN Disabled Accounts Check Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Disabled_Accounts_Check_Priority__c</fullName>
        <label>VPN Disabled Accounts Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Access_Log_Final_RAG__c</fullName>
        <label>VPN Systems Access Log Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Systems_Access_Log_Initial_RAG__c</fullName>
        <label>VPN Systems Access Log Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Systems_Access_Log_Review_Comments__c</fullName>
        <label>VPN Systems Access Log Review Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Access_Log_Review_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPN Systems Access Log Review Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Access_Log_Review_Comp_Date__c</fullName>
        <label>VPN Systems Access Log Review Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Access_Log_Review_Priority__c</fullName>
        <label>VPN Systems Access Log Review Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Firewall_Check_Comments__c</fullName>
        <label>VPN Systems Firewall Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Firewall_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPN Systems Firewall Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Firewall_Check_Comp_Date__c</fullName>
        <label>VPN Systems Firewall Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPN_Systems_Firewall_Check_Final_RAG__c</fullName>
        <label>VPN Systems Firewall Check Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Systems_Firewall_Check_Initial_RAG__c</fullName>
        <label>VPN Systems Firewall Check Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Systems_Firewall_Check_Priority__c</fullName>
        <label>VPN Systems Firewall Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iPhone_check_comments__c</fullName>
        <label>iPhone check comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPhone_check_completed_date__c</fullName>
        <label>iPhone check completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iPhone_check_final_RAG__c</fullName>
        <label>iPhone check final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iPhone_check_initial_RAg__c</fullName>
        <inlineHelpText>check of 3 random iphones to ensure touch ID and password are implemented.</inlineHelpText>
        <label>iPhone check initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iSeries_Check_Comments__c</fullName>
        <label>iSeries Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>iSeries_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>iSeries Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iSeries_Check_Completed_date__c</fullName>
        <label>iSeries Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iSeries_Check_Final_RAG__c</fullName>
        <label>iSeries Check Final RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iSeries_Check_Initial_RAG__c</fullName>
        <label>iSeries Check Initial RAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iSeries_Check_Priority__c</fullName>
        <label>iSeries Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>System Checks</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Completed_date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_security_checks_2016</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Completed_date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System_Checks__c.Weekly_Checks,System_Checks__c.Fortnightly_Checks,System_Checks__c.Monthly_Checks,System_Checks__c.Quarterly_Checks</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Open security checks 2016</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Checks</fullName>
        <columns>NAME</columns>
        <columns>Completed_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System_Checks__c.Salesforce_Monthly_Checks</value>
        </filters>
        <label>Salesforce Checks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Security_checks</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Completed_date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System_Checks__c.Weekly_Checks,System_Checks__c.Fortnightly_Checks,System_Checks__c.Monthly_Checks,System_Checks__c.Quarterly_Checks</value>
        </filters>
        <label>Security checks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Checks-{00}-{DDMMYY}</displayFormat>
        <label>System Checks</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Checks</pluralLabel>
    <recordTypes>
        <fullName>Fortnightly_Checks</fullName>
        <active>true</active>
        <description>For fortnightly system checks</description>
        <label>Fortnightly Checks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_Checks</fullName>
        <active>true</active>
        <description>For monthly system checks</description>
        <label>Monthly Checks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly_Checks</fullName>
        <active>true</active>
        <description>For quarterly system checks</description>
        <label>Quarterly Checks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Monthly_Checks</fullName>
        <active>true</active>
        <description>For Salesforce monthly checks</description>
        <label>Salesforce Monthly Checks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weekly_Checks</fullName>
        <active>true</active>
        <description>Weekly system checks</description>
        <label>Weekly Checks</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>